[gd_scene load_steps=23 format=2]

[ext_resource path="res://common/tex/circo_8.png" type="Texture" id=1]
[ext_resource path="res://common/shadows/ShapeShadows.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/materials/fx/bullet_thrust_particles_material.tres" type="Material" id=3]
[ext_resource path="res://game/weapons/ammo/trails/MisileTrail.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/weapons/ammo/fx/MisileHommingSound.res" type="PackedScene" id=5]
[ext_resource path="res://game/weapons/ammo/fx/MisileSoundFlight.res" type="PackedScene" id=6]
[ext_resource path="res://game/weapons/ammo/fx/MisileHit.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/weapons/ammo/fx/MisileShootSound.res" type="PackedScene" id=8]
[ext_resource path="res://game/weapons/ammo/homer/HomerRigid.gd" type="Script" id=9]
[ext_resource path="res://game/weapons/ammo/fx/MisileDissarm.tscn" type="PackedScene" id=10]

[sub_resource type="Gradient" id=5283]
offsets = PoolRealArray( 0, 0.348485, 0.731061 )
colors = PoolColorArray( 0, 0, 0, 1, 0.886719, 0.886719, 0.886719, 1, 0.914062, 0.914062, 0.914062, 1 )

[sub_resource type="GradientTexture" id=5284]
gradient = SubResource( 5283 )

[sub_resource type="Curve" id=5292]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.5, 200 ), 0.0, 0.0, 0, 0, Vector2( 1, 56.3636 ), 585.455, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5293]
curve = SubResource( 5292 )

[sub_resource type="Curve" id=5288]
max_value = 2.0
_data = [ Vector2( 0, 0.981818 ), 0.0, 0.0, 0, 0, Vector2( 0.418251, 1.9 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.309091 ), -0.878293, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5286]
curve = SubResource( 5288 )

[sub_resource type="ParticlesMaterial" id=5290]
lifetime_randomness = 0.43
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 1.0
angular_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel_curve = SubResource( 5293 )
radial_accel = 6.03
scale = 0.5
scale_curve = SubResource( 5286 )
color_ramp = SubResource( 5284 )

[sub_resource type="CanvasItemMaterial" id=5279]

[sub_resource type="RectangleShape2D" id=5297]
extents = Vector2( 10.5, 5 )

[sub_resource type="RectangleShape2D" id=5298]
extents = Vector2( 12, 5 )

[sub_resource type="CircleShape2D" id=5]
radius = 1289.78

[sub_resource type="CircleShape2D" id=5295]
radius = 31.6425

[node name="HomerRig" type="RigidBody2D"]
collision_layer = 32
contacts_reported = 1
contact_monitor = true
linear_damp = 1.0
script = ExtResource( 9 )
trail = ExtResource( 4 )
shoot_fx = [ ExtResource( 8 ) ]
flight_fx = [ ExtResource( 6 ) ]
homming_fx = [ ExtResource( 5 ) ]
dissarm_fx = [ ExtResource( 10 ) ]
hit_fx = [ ExtResource( 7 ) ]

[node name="ShapeShadows" parent="." instance=ExtResource( 2 )]
shadow_caster_paths = [ NodePath("../ShapePoly/ShapePoly") ]

[node name="TrailPosition" type="Position2D" parent="."]
position = Vector2( -6, 0 )
__meta__ = {
"_gizmo_extents_": 2.0
}

[node name="ShapePoly" type="Polygon2D" parent="."]
position = Vector2( 6, -4.5 )
polygon = PoolVector2Array( -24, -0.5, -24, 2.5, -21, 2.5, -21, 6.5, -24, 6.5, -24, 9.5, -21, 9.5, -18, 6.5, -17, 6.5, -14, 9.5, -3, 9.5, 0, 6.5, 0, 2.5, -3, -0.5, -14, -0.5, -17, 2.5, -18, 2.5, -21, -0.5 )

[node name="ShapePoly" type="Polygon2D" parent="ShapePoly"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -3, -0.5, 0, 2.5, 0, 6.5, -3, 9.5, -6, 9.5, -6, -0.5 )

[node name="SmokeParticles" type="Particles2D" parent="."]
position = Vector2( -27, 0 )
amount = 200
lifetime = 1.5
speed_scale = 2.0
randomness = 1.0
local_coords = false
process_material = SubResource( 5290 )
texture = ExtResource( 1 )

[node name="ThrustParticles" type="Particles2D" parent="."]
material = SubResource( 5279 )
position = Vector2( -20, 0 )
scale = Vector2( 3, 3 )
amount = 3
lifetime = 0.05
randomness = 1.0
process_material = ExtResource( 3 )
texture = ExtResource( 1 )

[node name="MisileCollision" type="CollisionShape2D" parent="."]
position = Vector2( -7.5, 0 )
shape = SubResource( 5297 )
disabled = true

[node name="DetectArea" type="Area2D" parent="."]
monitorable = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
position = Vector2( -6, 0 )
shape = SubResource( 5298 )

[node name="HommingArea" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="HommingArea"]
position = Vector2( 3, 3 )
shape = SubResource( 5 )

[node name="InfluenceArea" type="Area2D" parent="."]
scale = Vector2( 2, 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="InfluenceArea"]
shape = SubResource( 5295 )

[node name="VisionRay" type="RayCast2D" parent="."]
visible = false
position = Vector2( -8, 0 )
cast_to = Vector2( 24, 0 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_exited" from="DetectArea" to="." method="_on_DetectArea_body_exited"]
[connection signal="body_entered" from="HommingArea" to="." method="_on_HommingArea_body_entered"]
